XR: Make OpenXR opt-in, not default enabled
OpenXR support requires an external SDK that is not commonly
available in build environments. Change from enabled-by-default
to opt-in to prevent build failures on systems without OpenXR:

- CMake: SDL_GPU_OPENXR now defaults to OFF
- Windows config: HAVE_GPU_OPENXR commented out
- Android config: HAVE_GPU_OPENXR commented out

To enable OpenXR support, use -DSDL_GPU_OPENXR=ON with CMake
or manually uncomment HAVE_GPU_OPENXR in platform configs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -387,7 +387,7 @@ set_option(SDL_LIBUDEV             "Enable libudev support" ON)
 set_option(SDL_ASAN                "Use AddressSanitizer to detect memory errors" OFF)
 set_option(SDL_CCACHE              "Use Ccache to speed up build" OFF)
 set_option(SDL_CLANG_TIDY          "Run clang-tidy static analysis" OFF)
-dep_option(SDL_GPU_OPENXR          "Build SDL_GPU with OpenXR support" ON SDL_GPU OFF)
+dep_option(SDL_GPU_OPENXR          "Build SDL_GPU with OpenXR support" OFF SDL_GPU OFF)
 
 set(SDL_VENDOR_INFO "" CACHE STRING "Vendor name and/or version to add to SDL_REVISION")
 
