--- a/VisualC/examples/asyncio/01-load-bitmaps/01-load-bitmaps.vcxproj
+++ b/VisualC/examples/asyncio/01-load-bitmaps/01-load-bitmaps.vcxproj
@@ -3,8 +3,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{6A2BFA8B-C027-400D-A18B-3E9E1CC4DDD0}</ProjectGuid>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+  <Import Project="$(SolutionDir)\examples\Examples.props" />
   <ItemGroup>
     <None Include="$(SolutionDir)\..\examples\asyncio\01-load-bitmaps\README.txt" />
     <ClCompile Include="$(SolutionDir)\..\examples\asyncio\01-load-bitmaps\load-bitmaps.c" />
