--- a/VisualC/examples/audio/01-simple-playback/01-simple-playback.vcxproj
+++ b/VisualC/examples/audio/01-simple-playback/01-simple-playback.vcxproj
@@ -3,8 +3,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{EB448819-74BC-40C9-A61A-4D4ECD55F9D5}</ProjectGuid>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+  <Import Project="$(SolutionDir)\examples\Examples.props" />
   <ItemGroup>
     <None Include="$(SolutionDir)\..\examples\audio\01-simple-playback\README.txt" />
     <ClCompile Include="$(SolutionDir)\..\examples\audio\01-simple-playback\simple-playback.c" />
