--- a/VisualC/examples/audio/03-load-wav/03-load-wav.vcxproj
+++ b/VisualC/examples/audio/03-load-wav/03-load-wav.vcxproj
@@ -3,8 +3,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{608C6C67-7766-471F-BBFF-8B00086039AF}</ProjectGuid>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+  <Import Project="$(SolutionDir)\examples\Examples.props" />
   <ItemGroup>
     <None Include="$(SolutionDir)\..\examples\audio\03-load-wav\README.txt" />
     <ClCompile Include="$(SolutionDir)\..\examples\audio\03-load-wav\load-wav.c" />
