--- a/VisualC/examples/demo/01-snake/01-snake.vcxproj
+++ b/VisualC/examples/demo/01-snake/01-snake.vcxproj
@@ -3,8 +3,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{7820969A-5B7B-4046-BB0A-82905D457FC5}</ProjectGuid>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+  <Import Project="$(SolutionDir)\examples\Examples.props" />
   <ItemGroup>
     <None Include="$(SolutionDir)\..\examples\demo\01-snake\README.txt" />
     <ClCompile Include="$(SolutionDir)\..\examples\demo\01-snake\snake.c" />
