--- a/VisualC/examples/demo/03-infinite-monkeys/03-infinite-monkeys.vcxproj
+++ b/VisualC/examples/demo/03-infinite-monkeys/03-infinite-monkeys.vcxproj
@@ -3,8 +3,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{75AEE75A-C016-4497-960B-D767B822237D}</ProjectGuid>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+  <Import Project="$(SolutionDir)\examples\Examples.props" />
   <ItemGroup>
     <None Include="$(SolutionDir)\..\examples\demo\03-infinite-monkeys\README.txt" />
     <ClCompile Include="$(SolutionDir)\..\examples\demo\03-infinite-monkeys\infinite-monkeys.c" />
