--- a/VisualC/examples/input/02-joystick-events/02-joystick-events.vcxproj
+++ b/VisualC/examples/input/02-joystick-events/02-joystick-events.vcxproj
@@ -3,8 +3,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{FCBDF2B2-1129-49AE-9406-3F219E65CA89}</ProjectGuid>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+  <Import Project="$(SolutionDir)\examples\Examples.props" />
   <ItemGroup>
     <None Include="$(SolutionDir)\..\examples\input\02-joystick-events\README.txt" />
     <ClCompile Include="$(SolutionDir)\..\examples\input\02-joystick-events\joystick-events.c" />
