--- a/VisualC/examples/misc/03-locale/03-locale.vcxproj
+++ b/VisualC/examples/misc/03-locale/03-locale.vcxproj
@@ -3,8 +3,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{6381F9D3-BA5F-4E5C-80FF-9013964777EE}</ProjectGuid>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+  <Import Project="$(SolutionDir)\examples\Examples.props" />
   <ItemGroup>
     <None Include="$(SolutionDir)\..\examples\misc\03-locale\README.txt" />
     <ClCompile Include="$(SolutionDir)\..\examples\misc\03-locale\locale.c" />
