--- a/VisualC/examples/renderer/01-clear/01-clear.vcxproj
+++ b/VisualC/examples/renderer/01-clear/01-clear.vcxproj
@@ -3,8 +3,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{896557AC-7575-480C-8FFD-AB08B5DA305D}</ProjectGuid>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+  <Import Project="$(SolutionDir)\examples\Examples.props" />
   <ItemGroup>
     <None Include="$(SolutionDir)\..\examples\renderer\01-clear\README.txt" />
     <ClCompile Include="$(SolutionDir)\..\examples\renderer\01-clear\clear.c" />
