--- a/VisualC/examples/renderer/02-primitives/02-primitives.vcxproj
+++ b/VisualC/examples/renderer/02-primitives/02-primitives.vcxproj
@@ -3,8 +3,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{504DC7EC-D82E-448E-9C7D-3BE7981592B3}</ProjectGuid>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+  <Import Project="$(SolutionDir)\examples\Examples.props" />
   <ItemGroup>
     <None Include="$(SolutionDir)\..\examples\renderer\02-primitives\README.txt" />
     <ClCompile Include="$(SolutionDir)\..\examples\renderer\02-primitives\primitives.c" />
