--- a/VisualC/examples/renderer/03-lines/03-lines.vcxproj
+++ b/VisualC/examples/renderer/03-lines/03-lines.vcxproj
@@ -3,8 +3,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{BDE7DBC0-DCE7-432E-8750-C4AE55463699}</ProjectGuid>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+  <Import Project="$(SolutionDir)\examples\Examples.props" />
   <ItemGroup>
     <None Include="$(SolutionDir)\..\examples\renderer\03-lines\README.txt" />
     <ClCompile Include="$(SolutionDir)\..\examples\renderer\03-lines\lines.c" />
