--- a/VisualC/examples/renderer/04-points/04-points.vcxproj
+++ b/VisualC/examples/renderer/04-points/04-points.vcxproj
@@ -3,8 +3,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{7B250AB1-92D3-4F1A-BEB4-19605A69CEDB}</ProjectGuid>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+  <Import Project="$(SolutionDir)\examples\Examples.props" />
   <ItemGroup>
     <None Include="$(SolutionDir)\..\examples\renderer\04-points\README.txt" />
     <ClCompile Include="$(SolutionDir)\..\examples\renderer\04-points\points.c" />
