--- a/VisualC/examples/renderer/05-rectangles/05-rectangles.vcxproj
+++ b/VisualC/examples/renderer/05-rectangles/05-rectangles.vcxproj
@@ -3,8 +3,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{4C0E3A60-24F8-4D4C-81C0-C1777F5E7B17}</ProjectGuid>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+  <Import Project="$(SolutionDir)\examples\Examples.props" />
   <ItemGroup>
     <None Include="$(SolutionDir)\..\examples\renderer\05-rectangles\README.txt" />
     <ClCompile Include="$(SolutionDir)\..\examples\renderer\05-rectangles\rectangles.c" />
