--- a/VisualC/examples/renderer/11-color-mods/11-color-mods.vcxproj
+++ b/VisualC/examples/renderer/11-color-mods/11-color-mods.vcxproj
@@ -3,8 +3,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E9C6A7A6-22C0-42E6-AC9C-8580A396D077}</ProjectGuid>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+  <Import Project="$(SolutionDir)\examples\Examples.props" />
   <ItemGroup>
     <None Include="$(SolutionDir)\..\examples\renderer\11-color-mods\README.txt" />
     <ClCompile Include="$(SolutionDir)\..\examples\renderer\11-color-mods\color-mods.c" />
