--- a/VisualC/examples/renderer/18-debug-text/18-debug-text.vcxproj
+++ b/VisualC/examples/renderer/18-debug-text/18-debug-text.vcxproj
@@ -3,8 +3,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{CC0714AA-8A81-4E29-BEC5-2E4FBC50E7FE}</ProjectGuid>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+  <Import Project="$(SolutionDir)\examples\Examples.props" />
   <ItemGroup>
     <None Include="$(SolutionDir)\..\examples\renderer\18-debug-text\README.txt" />
     <ClCompile Include="$(SolutionDir)\..\examples\renderer\18-debug-text\debug-text.c" />
