--- a/VisualC/examples/renderer/19-affine-textures/19-affine-textures.vcxproj
+++ b/VisualC/examples/renderer/19-affine-textures/19-affine-textures.vcxproj
@@ -3,8 +3,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E21C50BF-54B4-434C-AA24-9A6469553987}</ProjectGuid>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+  <Import Project="$(SolutionDir)\examples\Examples.props" />
   <ItemGroup>
     <None Include="$(SolutionDir)\..\examples\renderer\19-affine-textures\README.txt" />
     <ClCompile Include="$(SolutionDir)\..\examples\renderer\19-affine-textures\affine-textures.c" />
