--- a/VisualC/SDL_test/SDL_test.vcxproj
+++ b/VisualC/SDL_test/SDL_test.vcxproj
@@ -176,6 +176,19 @@
     <ClCompile Include="..\..\src\test\SDL_test_md5.c" />
     <ClCompile Include="..\..\src\test\SDL_test_memory.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\include\SDL3\SDL_test.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_test_assert.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_test_common.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_test_compare.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_test_crc32.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_test_font.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_test_fuzzer.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_test_harness.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_test_log.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_test_md5.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_test_memory.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
