Use relative paths for OpenXR vendored headers
Following the pattern established by SDL_vulkan_internal.h, this creates
SDL_openxr_internal.h that uses relative paths to include the vendored
OpenXR headers from src/video/khronos/openxr/. This allows MSVC and Xcode
projects to compile OpenXR code without needing to modify include paths.

- Add SDL_openxr_internal.h with relative path includes
- Update SDL_openxrdyn.h to use the new internal header
- Update SDL_openxrdyn.c and SDL_openxrsym.h with relative paths
- Add the new header to VisualC, GDK, and Xcode projects

--- a/VisualC-GDK/SDL/SDL.vcxproj
+++ b/VisualC-GDK/SDL/SDL.vcxproj
@@ -932,6 +932,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\gpu\xr\SDL_gpu_openxr_c.h" />
+    <ClInclude Include="..\..\src\gpu\xr\SDL_openxr_internal.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\..\src\core\windows\version.rc" />
