autotools: Replace sys/types.h usage with stdint.h with CheckUSBHID
(cherry picked from commit de41387c4bf274e2bdffb6ae53686a89fcf65153)

--- a/configure.ac
+++ b/configure.ac
@@ -3484,7 +3484,7 @@ CheckUSBHID()
                 AC_MSG_CHECKING(for usbhid)
                 have_usbhid=no
                 AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[
-                  #include <sys/types.h>
+                  #include <stdint.h>
                   #if defined(HAVE_USB_H)
                   #include <usb.h>
                   #endif
@@ -3513,7 +3513,7 @@ CheckUSBHID()
                     AC_MSG_CHECKING(for ucr_data member of usb_ctl_report)
                     have_usbhid_ucr_data=no
                     AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[
-                      #include <sys/types.h>
+                      #include <stdint.h>
                       #if defined(HAVE_USB_H)
                       #include <usb.h>
                       #endif
@@ -3543,7 +3543,7 @@ CheckUSBHID()
                     AC_MSG_CHECKING(for new usbhid API)
                     have_usbhid_new=no
                     AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[
-                      #include <sys/types.h>
+                      #include <stdint.h>
                       #if defined(HAVE_USB_H)
                       #include <usb.h>
                       #endif
