--- a/VisualC/examples/audio/04-multiple-streams/04-multiple-streams.vcxproj
+++ b/VisualC/examples/audio/04-multiple-streams/04-multiple-streams.vcxproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <None Include="$(SolutionDir)\..\examples\audio\04-multiple-streams\README.txt" />
     <ClCompile Include="$(SolutionDir)\..\examples\audio\04-multiple-streams\multiple-streams.c" />
+    <Content Include="$(SolutionDir)\..\test\sample.wav" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="$(SolutionDir)\..\test\sword.wav" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
 </Project>
