--- a/VisualC/examples/renderer/19-affine-textures/19-affine-textures.vcxproj
+++ b/VisualC/examples/renderer/19-affine-textures/19-affine-textures.vcxproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <None Include="$(SolutionDir)\..\examples\renderer\19-affine-textures\README.txt" />
     <ClCompile Include="$(SolutionDir)\..\examples\renderer\19-affine-textures\affine-textures.c" />
+    <Content Include="$(SolutionDir)\..\test\sample.png" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
 </Project>
