--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -331,6 +331,13 @@ if(CYGWIN)
   list(APPEND SDL_CFLAGS "-I/usr/include/mingw")
 endif()
 
+######### *FIXME*
+if(PS4 OR ORBIS)
+  set(USE_GENERATED_CONFIG Off)
+else()
+  set(USE_GENERATED_CONFIG On)
+endif()
+
 # General includes
 target_compile_definitions(sdl-build-options INTERFACE "-DUSING_GENERATED_CONFIG_H")
 target_include_directories(sdl-build-options BEFORE INTERFACE "${SDL2_BINARY_DIR}/include" "${SDL2_BINARY_DIR}/include-config-$<LOWER_CASE:$<CONFIG>>")
@@ -357,6 +364,15 @@ if(EMSCRIPTEN)
   set(SDL_ATOMIC_ENABLED_BY_DEFAULT OFF)
   set(SDL_LOADSO_ENABLED_BY_DEFAULT OFF)
   set(SDL_CPUINFO_ENABLED_BY_DEFAULT OFF)
+endif()
+
+if(PS4 OR ORBIS)
+  set(SDL_ATOMIC_ENABLED_BY_DEFAULT ON)
+  set(SDL_SHARED_ENABLED_BY_DEFAULT OFF)
+  set(SDL_THREADS_ENABLED_BY_DEFAULT ON)
+  set(SDL_PTHREADS_ENABLED_BY_DEFAULT ON)
+  set(SDL_LOADSO_ENABLED_BY_DEFAULT OFF)
+  set(SDL_DLOPEN_ENABLED_BY_DEFAULT OFF)
 endif()
 
 if(VITA OR PSP OR PS2 OR N3DS)
@@ -1478,7 +1494,42 @@ elseif(EMSCRIPTEN)
 
   CheckPTHREAD()
   CheckLibUnwind()
+elseif(PS4 OR ORBIS)
+  CheckPTHREAD()
+  if(SDL_AUDIO)
+    set(SDL_AUDIO_DRIVER_PS4 1)
+    file(GLOB PS4_AUDIO_SOURCES ${SDL2_SOURCE_DIR}/src/audio/ps4/*.c)
+    set(SOURCE_FILES ${SOURCE_FILES} ${PS4_AUDIO_SOURCES})
+    set(HAVE_SDL_AUDIO TRUE)
+  endif()
+#  if(SDL_FILESYSTEM)
+#    set(SDL_FILESYSTEM_PS4 1)
+#    file(GLOB PS4_FILESYSTEM_SOURCES ${SDL2_SOURCE_DIR}/src/filesystem/ps4/*.c)
+#    set(SOURCE_FILES ${SOURCE_FILES} ${PS4_FILESYSTEM_SOURCES})
+#    set(HAVE_SDL_FILESYSTEM TRUE)
+#  endif()
+  if(SDL_JOYSTICK)
+    set(SDL_JOYSTICK_PS4 1)
+    file(GLOB PS4_JOYSTICK_SOURCES ${SDL2_SOURCE_DIR}/src/joystick/ps4/*.c)
+    set(SOURCE_FILES ${SOURCE_FILES} ${PS4_JOYSTICK_SOURCES})
+    set(HAVE_SDL_JOYSTICK TRUE)
+  endif()
+  if(SDL_TIMERS)
+    set(SDL_TIMER_UNIX 1)
+    file(GLOB TIMER_SOURCES ${SDL2_SOURCE_DIR}/src/timer/unix/*.c)
+    set(SOURCE_FILES ${SOURCE_FILES} ${TIMER_SOURCES})
+    set(HAVE_SDL_TIMERS TRUE)
 
+    if(CLOCK_GETTIME)
+      set(HAVE_CLOCK_GETTIME 1)
+    endif()
+  endif()
+  if(SDL_VIDEO)
+    set(SDL_VIDEO_DRIVER_PS4 1)
+    file(GLOB PS4_VIDEO_SOURCES ${SDL2_SOURCE_DIR}/src/video/ps4/*.c)
+    set(SOURCE_FILES ${SOURCE_FILES} ${PS4_VIDEO_SOURCES})
+    set(HAVE_SDL_VIDEO TRUE)
+  endif()
 elseif(UNIX AND NOT APPLE AND NOT RISCOS AND NOT HAIKU)
   if(SDL_AUDIO)
     if(SYSV5 OR SOLARIS OR HPUX)
@@ -3039,7 +3090,7 @@ endif()
 # We always need to have threads and timers around
 if(NOT HAVE_SDL_THREADS)
   # The emscripten platform has been carefully vetted to work without threads
-  if (EMSCRIPTEN)
+  if (EMSCRIPTEN OR PS4 OR ORBIS)
     set(SDL_THREADS_DISABLED 1)
     file(GLOB THREADS_SOURCES ${SDL2_SOURCE_DIR}/src/thread/generic/*.c)
     list(APPEND SOURCE_FILES ${THREADS_SOURCES})
